logs/ts2mkv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ts2mkv'...
Compiling './lib/python3.5/site-packages/ts2mkv/checkenv.py'...
***   File "./lib/python3.5/site-packages/ts2mkv/checkenv.py", line 8
    print 'modules_path:', common.modules_path()
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ts2mkv/dll'...
Listing './lib/python3.5/site-packages/ts2mkv/lib'...
Listing './lib/python3.5/site-packages/ts2mkv/lib/OS2'...
Listing './lib/python3.5/site-packages/ts2mkv/lib/c_src'...
Listing './lib/python3.5/site-packages/ts2mkv/lib/c_src/idct_ref'...
Listing './lib/python3.5/site-packages/ts2mkv/lib/c_src/idct_sse'...
Compiling './lib/python3.5/site-packages/ts2mkv/metadata.py'...
***   File "./lib/python3.5/site-packages/ts2mkv/metadata.py", line 86
    print '  Track ID:', self.id
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ts2mkv/mkvenc.py'...
***   File "./lib/python3.5/site-packages/ts2mkv/mkvenc.py", line 37
    print "Error: File doesn't seem to be a valid Matroska file:", fname
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ts2mkv/ts2mkv.py'...
***   File "./lib/python3.5/site-packages/ts2mkv/ts2mkv.py", line 40
    print "Error: File doesn't seem to be a valid DVB Transport Stream file:", fname
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ts2mkv-2.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
